@@ -173,6 +173,15 @@ tag on or off for the selected messages (the first selected message is used
 to determine if the tag has to be added or removed). Note that Save and Copy
 have the same behavior when applied to tags.</p>
 
+<p>It is possible to create new tags directly from the completion box.
+If you enter a string of the form <tt>:foobar</tt> or <tt>:foobar:</tt>
+(that is, a leading colon and an optional trailing colon), it will
+open the tag creation dialog with the tag name set to <tt>foobar</tt>
+(in order to confirm the creation of the tag and choose its color).
+If you confirm, the command is applied to the new tag.
+</p>
+
+
 <p>You may also use tags rather than folders as targets for Nostalgy's
 rules.</p>
 
