@@ -7,6 +7,7 @@ content/about.xhtml
 content/edit_rule.xul
 content/folders.js
 content/edit_rule.js
+content/completion_prefs.js
 content/composerOverlay.xul
 content/edit_prefs.js
 content/nostalgy.js
